--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "antd": "^4.16.13",
     "axios": "^0.24.0",
     "chart.js": "^3.6.0",
+    "plotly.js": "^2.6.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
