--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
     "plotly.js": "^2.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-plotly.js": "^2.5.1",
