--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "scripts": {
     "heroku-prebuild": "npm i -f",
     "heroku-postbuild": "npm run build",
-    "start": "node App.js",
     "start": "node ./src/App.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
