package.json fix

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  "type": "module",
   "name": "schedule-evaluation",
   "version": "0.1.0",
   "private": true,
@@ -50,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  {
-	"type": "module"
   }
 }
